--- a/frontend/src/components/Plants/Plants.css
+++ b/frontend/src/components/Plants/Plants.css
@@ -5,6 +5,7 @@
     justify-content: center;
     gap: 20px;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .search-field {
